add jvm configuration